--- a/src/style.css
+++ b/src/style.css
@@ -67,6 +67,103 @@ html, body {
 
 /** STUFF ABOVE IS STANDARD FRAMEWORK **/
 
+.main {
+  position: relative;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - var(--controls-height));
+  overflow: hidden;
+  align-items: center;
+  justify-content: center;
+}
+
+.controls {
+  position: relative;
+  flex-grow: 0;
+  height: var(--controls-height);
+  overflow: hidden;
+  width: 100%;
+}
+
+.controls i {
+  --size: 2em;
+  --padding: 0.3em;
+
+  position: relative;
+  font-size: var(--size);
+  padding: 0 var(--padding);
+  cursor: default;
+}
+
+.controls.help .material-icons {
+  font-size: 1em;
+  padding-bottom: 1em;
+  width: calc((var(--padding) * 4) + var(--size));
+  text-align: center;
+  margin: 0;
+}
+
+.controls.help .material-icons::after {
+  content: attr(title);
+  position: absolute;
+  font-size: 0.8em;
+  bottom: -0.1em;
+  left: 0;
+  width: 100%;
+  overflow: visible;
+  display: block;
+  font-family: sans-serif;
+  text-align: center;
+}
+
+.palette {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background: var(--background);
+  user-select: none;
+}
+
+/* MENU */
+
+.menu {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0,0,0,0.5);
+  z-index: 10;
+}
+
+.menu > ul {
+  position: absolute;
+  bottom: 0;
+  background: var(--background);
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  border-radius: 5px 5px 0 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+}
+
+.menu > ul > li {
+  display: flex;
+  align-items: center;
+  padding: 20px;
+}
+
+.menu > ul > li > i {
+  padding-right: 0.5em;
+}
+
+/* MISC */
+
 img {
   max-height: 50%;
 }
