--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 :root {
   --controls-height: 3em;
+  --lvl2: #27292b;
   --background: #202124;
   --middleground: #777777;
   --foreground: #e5e5e5;
@@ -82,7 +83,6 @@ html, body {
   bottom: 0;
   left: 0;
   height: var(--controls-height);
-  overflow: hidden;
   width: 100%;
 }
 
@@ -125,6 +125,11 @@ html, body {
   height: 100%;
   background: var(--background);
   user-select: none;
+  max-width: var(--limit);
+  margin: auto;
+  border-radius: 16px 16px 0 0;
+  background: linear-gradient(var(--lvl2), var(--background), var(--background));
+  box-shadow: 0 -12px 8px -10px var(--lvl2);
 }
 
 /* MENU */
@@ -198,5 +203,10 @@ html, body {
     --max: calc(100vw - 20px);
     max-width: var(--max);
     max-height: var(--max);
+  }
+
+  .palette {
+    width: 100%;
+    border-radius: 0;
   }
 }
