shadow helps the palette pop forward

--- a/src/style.css
+++ b/src/style.css
@@ -129,7 +129,7 @@ html, body {
   margin: auto;
   border-radius: 16px 16px 0 0;
   background: linear-gradient(var(--lvl2), var(--background) 60%);
-  box-shadow: 0 -12px 8px -10px var(--lvl2);
+  box-shadow: 0 -7px 8px -10px black;
 }
 
 /* MENU */
